--- a/src/styles.css
+++ b/src/styles.css
@@ -1,50 +1,22 @@
 .dev-tools{
-	border: solid 2px grey;
-	margin-bottom: 50px;
+	border: solid 2px orange;
+
+	color: orange;
 	/*display:none;*/
 }
- 	.dev-tools button {
-		/*height: auto;
-		width: auto;*/
-        /*display: inline;*/
-		font-size: 2em;
-	}
 
 .hidden{
 	display: none;
 }
 
 .delete-game{
-	padding-top: 50px;			/* temporary !! */
+	padding-top: 20px;			/* temporary !! */
 }
-
-
 
 li{
 	list-style-type: none;
-	font-size: 3em;
+	font-size: 1.5rem
 }
-
-h1{
-	font-size: 60px;
-}
-
-h3{
-	font-size: 50px;
-}
-
-
-p{
-	font-size: 40px;
-}
-
-/*input[type=checkbox] {
-    zoom: 0;
-    font-size: 10px;
-	font-size: 40px;
-	vertical-align: middle;
-	margin-top: 0;
-}*/
 
 .li-checkbox [type=checkbox] {
     /*zoom: 0;   not a good way to to this*/
@@ -53,26 +25,3 @@ p{
 	vertical-align: middle;
 	margin-top: 0;
 }
-
-.btn-huge{
-    padding-top:20px;
-    padding-bottom:20px;
-}
-
-.wrapper button {
-	margin-top: 40px;
-	margin-bottom: 40px;
-	font-size: 5em;
-}
-
-.input-lg {
-    height: 80px;
-    font-size: 40px;
-}
-
-.form-control{
-	height: 100px;
-	font-size: 50px;
-}
-
-
